@@ -1,5 +1,14 @@
 2008-02-08  Robert Millan  <rmh@aybabtu.com>
 
+	* include/grub/raid.h (struct grub_raid_array): Change type of `device'
+	to a grub_disk_t array.
+	* disk/raid.c (grub_raid_read): Replace `device[x].disk' accesses with
+	`device[x]'.
+	(grub_raid_scan_device): Replace `device[x].name' accesses with
+	`device[x]->name'.  Simplify initialization of `array->device[x]'.
+
+2008-02-08  Robert Millan  <rmh@aybabtu.com>
+
 	* disk/raid.c (grub_raid_open, grub_raid_scan_device): Add a few
 	grub_dprintf() calls.
 	* kern/disk.c (grub_disk_read): Include grub_errmsg in out of range
